--- a/overstock/src/App.css
+++ b/overstock/src/App.css
@@ -1,9 +1,10 @@
 
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
   text-align: center;
+  
 }
 
 .logo {
@@ -27,6 +28,7 @@
     transform: rotate(360deg);
   }
 }
+
 
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
